--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,5 +13,6 @@
   google_scholar_id={g1ckndEAAAAJ},
   dimensions={true},
   selected={true},
-  pdf={example_pdf.pdf}
+  pdf={demmese2024transfer.pdf}
+  url={https://link.springer.com/article/10.1007/s44163-024-00154-z},
 }
