--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,5 +14,5 @@
   dimensions={true},
   selected={true},
   pdf={demmese2024transfer.pdf},
-  url={https://link.springer.com/article/10.1007/s44163-024-00154-z}
+  html={https://link.springer.com/article/10.1007/s44163-024-00154-z}
 }
