--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,5 +15,5 @@
   selected={true},
   pdf={demmese2024transfer.pdf},
   html={https://link.springer.com/article/10.1007/s44163-024-00154-z},
-   preview={brownian-motion.gif}
+   preview={1.png}
 }
