--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,4 @@
 @article{demmese2024transfer,
-  abbr={Discover Artificial Intelligence},
   bibtex_show={true},
   title={Transfer learning with ResNet50 for malicious domains classification using image visualization},
   author={Demmese, Fikirte Ayalke and Shajarian, Shaghayegh and Khorsandroo, Sajad},
@@ -15,5 +14,6 @@
   selected={true},
   pdf={demmese2024transfer.pdf},
   html={https://link.springer.com/article/10.1007/s44163-024-00154-z},
-   preview={1.png}
+  preview={1.png},
+  note={Available on Google Scholar: https://scholar.google.com/citations?view_op=view_citation&hl=en&user=g1ckndEAAAAJ&citation_for_view=g1ckndEAAAAJ:u5HHmVD_uO8C},
 }
