--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
   pages={1--14},
   year={2024},
   publisher={Springer},
-  google_scholar_id={g1ckndEAAAAJ},
+  google_scholar_id={g1ckndEAAAAJ:u5HHmVD_uO8C},
   dimensions={true},
   selected={true},
   pdf={demmese2024transfer.pdf},
