--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,10 +9,12 @@
   pages={1--14},
   year={2024},
   publisher={Springer},
-  google_scholar_id={g1ckndEAAAAJ},
   dimensions={true},
   selected={true},
   pdf={demmese2024transfer.pdf},
   html={https://link.springer.com/article/10.1007/s44163-024-00154-z},
   preview={1.png},
   }
+
+
+ #google_scholar_id={g1ckndEAAAAJ},
