--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,7 +29,7 @@
       selected={true},
       pdf={Explainable_Malware_Analysis.pdf},
       html={https://arxiv.org/abs/2409.13723}, 
-      preview={1.jpg},
+      preview={2.png},
 }
 
 
