--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,7 +53,7 @@ interoperability, orchestration, and complexity, are also discussed.
 We complete this paper by examining use cases for two types of
 networks—Data Center Networks (DCN) and Wireless Sensor
 Networks (WSN)—and illustrate how self-running networks can
-revolutionize their functionality and efficiency}
+revolutionize their functionality and efficiency},
   journal={Authorea Preprints},
   year={2024},
   publisher={techRxiv},
