--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -60,7 +60,7 @@ revolutionize their functionality and efficiency},
   primaryClass={cs.CR},
   dimensions={true},
   selected={true},
-  pdf={Self_Running_networks.pdf},
+  pdf={Self_Running_Networks.pdf},
   html={https://www.techrxiv.org/doi/full/10.36227/techrxiv.172840773.30369998}, 
   preview={3.png}
 }
