--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,12 +3,11 @@
   title={Transfer learning with ResNet50 for malicious domains classification using image visualization},
   author={Demmese, Fikirte Ayalke and Shajarian, Shaghayegh and Khorsandroo, Sajad},
   abstract={The Internet has become a vital part of our daily lives, serving as a hub for global connectivity and a facilitator for seamless communication and information exchange. However, the rise of malicious domains presents a serious challenge, undermining the reliability of the Internet and posing risks to user safety. These malicious activities exploit the Domain Name System (DNS) to deceive users, leading to harmful activities such as spreading drive-by-download malware, operating botnets, creating phishing sites, and sending spam. In response to this growing threat, the application of Machine Learning (ML) techniques has proven to be highly effective. These methods excel in quickly and accurately detecting, classifying, and analyzing such threats. This paper explores the latest developments in using transfer learning for the classification of malicious domains, with a focus on image visualization as a key methodological approach. Our proposed solution has achieved a remarkable testing accuracy rate of 98.67%, demonstrating its effectiveness in detecting and classifying malicious domains.},
-  journal={Discover Artificial Intelligence},
   volume={4},
   number={1},
   pages={1--14},
   year={2024},
-  publisher={Springer},
+  publisher={Discover Artificial Intelligence, Springer},
   dimensions={true},
   selected={true},
   pdf={demmese2024transfer.pdf},
