--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,6 +64,24 @@ revolutionize their functionality and efficiency},
   preview={3.png}
 }
 
+@inproceedings{shajarian2024poster,
+  bibtex_show={true},
+  title={Poster: Intelligent Network Management: RAG-Enhanced LLMs for Log Analysis, Troubleshooting, and Documentation},
+  author={Shajarian, Shaghayegh and Khorsandroo, Sajad and Abdelsalam, Mahmoud},
+  abstract={Modern network management is increasingly complex, requiring administrators to handle vast amounts of log data from diverse sources, leading to inefficiencies, errors, and operational challenges. In this work, we propose a novel AI-driven framework that integrates Large Language Models (LLMs) with Retrieval-Augmented Generation (RAG) and human-in-the-loop process to automate network management tasks such as log analysis, troubleshooting recommendations, and documentation generation. This study aims to enhance network reliability, reduce operational complexity, and move forward to autonomous network management.},
+  booktitle={Proceedings of the 20th International Conference on emerging Networking EXperiments and Technologies},
+  pages={27--28},
+  year={2024},
+  publisher={ACM},
+  primaryClass={cs.CR},
+  dimensions={true},
+  selected={true},
+  pdf={Poster-Intelligent Network Management- RAG-Enhanced LLMs.pdf},
+  html={https://dl.acm.org/doi/abs/10.1145/3680121.3699887}, 
+  preview={framework.jpg}
+}
+
+
 
 https://d197for5662m48.cloudfront.net/documents/publicationstatus/226864/preprint_pdf/4fc30565907d31482482ab357b200c0f.pdf
 
