--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,23 +20,23 @@
   title={A Survey on Self-Running Networks: Concepts, Components, Opportunities, and Challenges},
   author={Shajarian, Shaghayegh and Khorsandroo, Sajad and Abdelsalam, Mahmoud},
   abstract={Over the past decade, the integration of the Internet
-of Things (IoT), 5th Generation Mobile Networks (5G), and
-Cloud 3.0 technologies has significantly transformed the internet
-landscape. These advancements have led to a massive increase in
-connected devices and data generation. Traditional network management, reliant on manual processes and simple mathematical
-models, has become insufficient due to the increased complexity
-and dynamic nature of modern networks. To address these
-new challenges, self-running networks as an enhanced network
-management approach can be utilized. These networks are characterized by their autonomous and intelligent capabilities that
-remove the need for human intervention. This paper explores the
-core components and functionalities of self-running networks and
-proposes their architecture. Additionally, the paper highlights
-ongoing research toward self-running networks. Current challenges in implementing self-running networks, such as security,
-interoperability, orchestration, and complexity, are also discussed.
-We complete this paper by examining use cases for two types of
-networks—Data Center Networks (DCN) and Wireless Sensor
-Networks (WSN)—and illustrate how self-running networks can
-revolutionize their functionality and efficiency},
+  of Things (IoT), 5th Generation Mobile Networks (5G), and
+  Cloud 3.0 technologies has significantly transformed the internet
+  landscape. These advancements have led to a massive increase in
+  connected devices and data generation. Traditional network management, reliant on manual processes and simple mathematical
+  models, has become insufficient due to the increased complexity
+  and dynamic nature of modern networks. To address these
+  new challenges, self-running networks as an enhanced network
+  management approach can be utilized. These networks are characterized by their autonomous and intelligent capabilities that
+  remove the need for human intervention. This paper explores the
+  core components and functionalities of self-running networks and
+  proposes their architecture. Additionally, the paper highlights
+  ongoing research toward self-running networks. Current challenges in implementing self-running networks, such as security,
+  interoperability, orchestration, and complexity, are also discussed.
+  We complete this paper by examining use cases for two types of
+  networks—Data Center Networks (DCN) and Wireless Sensor
+  Networks (WSN)—and illustrate how self-running networks can
+  revolutionize their functionality and efficiency},
   journal={Authorea Preprints},
   year={2024},
   publisher={techRxiv},
@@ -70,23 +70,15 @@ revolutionize their functionality and efficiency},
   title={Transfer learning with ResNet50 for malicious domains classification using image visualization},
   author={Demmese, Fikirte Ayalke and Shajarian, Shaghayegh and Khorsandroo, Sajad},
   abstract={The Internet has become a vital part of our daily lives, serving as a hub for global connectivity and a facilitator for seamless communication and information exchange. However, the rise of malicious domains presents a serious challenge, undermining the reliability of the Internet and posing risks to user safety. These malicious activities exploit the Domain Name System (DNS) to deceive users, leading to harmful activities such as spreading drive-by-download malware, operating botnets, creating phishing sites, and sending spam. In response to this growing threat, the application of Machine Learning (ML) techniques has proven to be highly effective. These methods excel in quickly and accurately detecting, classifying, and analyzing such threats. This paper explores the latest developments in using transfer learning for the classification of malicious domains, with a focus on image visualization as a key methodological approach. Our proposed solution has achieved a remarkable testing accuracy rate of 98.67%, demonstrating its effectiveness in detecting and classifying malicious domains.},
+  journal={Discover Artificial Intelligence},
   volume={4},
   number={1},
-  pages={1--14},
+  pages={52},
   year={2024},
-  publisher={Discover Artificial Intelligence, Springer},
+  publisher={Springer},
   dimensions={true},
   selected={true},
   pdf={demmese2024transfer.pdf},
   html={https://link.springer.com/article/10.1007/s44163-024-00154-z},
   preview={1.png},
-  }
-
-
-
-
-
-
-https://d197for5662m48.cloudfront.net/documents/publicationstatus/226864/preprint_pdf/4fc30565907d31482482ab357b200c0f.pdf
-
- #google_scholar_id={g1ckndEAAAAJ},
+}
