--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,19 +48,30 @@
   preview={3.png}
 }
 
- @misc{manthena2024explainablemalwareanalysisconcepts,
+ @article{manthena2025explainable,
       bibtex_show={true},
-      title={Explainable Malware Analysis: Concepts, Approaches and Challenges}, 
-      author={Harikha Manthena and Shaghayegh Shajarian and Jeffrey Kimmell and Mahmoud Abdelsalam and Sajad Khorsandroo and Maanak Gupta},
-      abstract={Machine learning (ML) has seen exponential growth in recent years, finding applications in various domains such as finance, medicine, and cybersecurity. Malware remains a significant threat to modern computing, frequently used by attackers to compromise systems. While numerous machine learning-based approaches for malware detection achieve high performance, they often lack transparency and fail to explain their predictions. This is a critical drawback in malware analysis, where understanding the rationale behind detections is essential for security analysts to verify and disseminate information. Explainable AI (XAI) addresses this issue by maintaining high accuracy while producing models that provide clear, understandable explanations for their decisions. In this survey, we comprehensively review the current state-of-the-art ML-based malware detection techniques and popular XAI approaches. Additionally, we discuss research implementations and the challenges of explainable malware analysis. This theoretical survey serves as an entry point for researchers interested in XAI applications in malware detection. By analyzing recent advancements in explainable malware analysis, we offer a broad overview of the progress in this field, positioning our work as the first to extensively cover XAI methods for malware classification and detection.},
-      year={2024},
-      eprint={2409.13723},
-      archivePrefix={arXiv},
-      primaryClass={cs.CR},
+      title={Explainable artificial intelligence (xai) for malware analysis: A survey of techniques, applications, and open challenges}, 
+      author={{Manthena, Harikha and Shajarian, Shaghayegh and Kimmell, Jeffrey and Abdelsalam, Mahmoud and Khorsandroo, Sajad and Gupta, Maanak},
+      abstract={Machine learning (ML) has rapidly advanced in recent years, revolutionizing fields such
+as finance, medicine, and cybersecurity. In malware detection, ML-based approaches have demonstrated
+high accuracy; however, their lack of transparency poses a significant challenge. Traditional ML
+models often fail to provide interpretable justifications for their predictions, limiting their adoption in
+security-critical environments where understanding the reasoning behind a detection is essential for threat
+mitigation and response. Explainable AI (XAI) addresses this gap by enhancing model interpretability
+while maintaining strong detection capabilities. This survey presents a comprehensive review of stateof-the-art ML techniques for malware analysis, with a specific focus on explainability methods and
+research mainly from 2018 to 2024. We examine existing XAI frameworks, their application in malware
+classification and detection, and the challenges associated with making malware detection models more
+interpretable. Additionally, we explore recent advancements and highlight open research challenges in the
+field of explainable malware analysis. By providing a structured overview of XAI-driven malware detection
+approaches, this survey serves as a valuable resource for researchers and practitioners seeking to bridge the
+gap between ML performance and explainability in cybersecurity.},
+      journal={IEEE Access},
+      year={2025},
+      publisher={IEEE}
       dimensions={true},
       selected={true},
-      pdf={Explainable_Malware_Analysis.pdf},
-      html={https://arxiv.org/abs/2409.13723}, 
+      pdf={Explainable_Artificial_Intelligence_XAI_for_Malware_Analysis_A_Survey_of_Techniques_Applications_and_Open_Challenges.pdf},
+      html={https://ieeexplore.ieee.org/abstract/document/10944807}, 
       preview={2.png},
 }
 
