--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -17,34 +17,17 @@
 
 @article{shajarian2024survey,
   bibtex_show={true},
-  title={A Survey on Self-Running Networks: Concepts, Components, Opportunities, and Challenges},
+  title={Self-Running Networks: A Comprehensive Survey of Foundations, Applications, and Challenges},
   author={Shajarian, Shaghayegh and Khorsandroo, Sajad and Abdelsalam, Mahmoud},
-  abstract={Over the past decade, the integration of the Internet
-  of Things (IoT), 5th Generation Mobile Networks (5G), and
-  Cloud 3.0 technologies has significantly transformed the internet
-  landscape. These advancements have led to a massive increase in
-  connected devices and data generation. Traditional network management, reliant on manual processes and simple mathematical
-  models, has become insufficient due to the increased complexity
-  and dynamic nature of modern networks. To address these
-  new challenges, self-running networks as an enhanced network
-  management approach can be utilized. These networks are characterized by their autonomous and intelligent capabilities that
-  remove the need for human intervention. This paper explores the
-  core components and functionalities of self-running networks and
-  proposes their architecture. Additionally, the paper highlights
-  ongoing research toward self-running networks. Current challenges in implementing self-running networks, such as security,
-  interoperability, orchestration, and complexity, are also discussed.
-  We complete this paper by examining use cases for two types of
-  networks—Data Center Networks (DCN) and Wireless Sensor
-  Networks (WSN)—and illustrate how self-running networks can
-  revolutionize their functionality and efficiency},
+  abstract={Self-running networks represent a groundbreaking paradigm for achieving fully autonomous network infrastructures capable of self-configuration, self-optimization, self-healing, and self-protection without human intervention. Although numerous isolated studies have explored aspects of self-running networks, an integrated and holistic overview is still lacking. This survey addresses this gap by providing a comprehensive system-level exposition, formalizing the concept of self-running networks, and detailing the architectural components that enable end-to-end autonomy through a unified seven-layer reference model. We also analyze the key self-* functionalities, including their core mechanisms, operational challenges, and representative application domains. Furthermore, we propose a six-level network autonomy maturity model to evaluate the evolution of network intelligence from manual operations to fully autonomous systems. We further synthesize foundational paradigms and practical implementations, providing a consolidated view of current advancements. In addition, we discuss critical challenges in self-running networks, including security, scalability, interoperability, and ethical considerations. Finally, we highlight research directions and open issues to guide future innovations and accelerate the deployment of self-running networks in real-world environments. This work serves as a conceptual and practical reference for researchers, practitioners, and industry stakeholders aiming to design, deploy, and advance next-generation self-running networks.},
   journal={Authorea Preprints},
-  year={2024},
+  year={2025},
   publisher={techRxiv},
   primaryClass={cs.CR},
   dimensions={true},
   selected={true},
   pdf={Self_Running_Networks.pdf},
-  html={https://www.techrxiv.org/doi/full/10.36227/techrxiv.172840773.30369998}, 
+  html={https://www.techrxiv.org/users/840438/articles/1230708-self-running-networks-a-comprehensive-survey-of-foundations-applications-and-challenges}, 
   preview={3.png}
 }
 
